# pybear-dask

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  CONTRIBUTING.rst  README.rst  TODO  pyproject.toml  pyproject_2024.toml  pyproject_locked.toml  pyproject_og.toml  pytest.ini  tox.ini
.github/workflows/: matrix-tests-py310.yml  matrix-tests-py311.yml  matrix-tests-py312.yml  matrix-tests-py313.yml  matrix-tests-py314.yml  matrix-tests-py39.yml  pypi-publish.yml  testpypi-publish.yml
benchmarking/: pizza
benchmarking/GSTCV/: dask_XGBClassifier_vs_Logistic__time_benchmark.py  skLogistic_vs_daskLogistic__time_benchmark.py
benchmarking/GSTCV/_GSTCVDask/: GSCV_vs_GSTCV__time_benchmark.py  GSTCVDask.py  GSTCVDask_visualize_sandbox.py  dask_classifier_fit_scratch.py
benchmarking/autogridsearch/: AutoGSTCVDask.py  dask_AutoGridSearch.py
benchmarking/model_selection/GSTCV/_GSTCVDask/: GSCV_vs_GSTCV__time_benchmark.py  GSTCVDask.py  GSTCVDask_visualize_sandbox.py  estimator_fit_params_helper.py  fit_accuracy_vs_sk_gscv.py
benchmarking/model_selection/autogridsearch/: AutoGSTCVDask.py  dask_AutoGridSearch.py
src/pybear_dask/base/: _is_classifier.py
src/pybear_dask/model_selection/GSTCV/_GSTCVDask/: GSTCVDask.py  _type_aliases.py
src/pybear_dask/model_selection/GSTCV/_GSTCVDask/_fit/: _estimator_fit_params_helper.py  _fold_splitter.py  _get_kfold.py  _parallelized_fit.py  _parallelized_scorer.py  _parallelized_train_scorer.py
src/pybear_dask/model_selection/GSTCV/_GSTCVDask/_param_conditioning/: _scheduler.py
src/pybear_dask/model_selection/GSTCV/_GSTCVDask/_validation/: _cache_cv.py  _dask_estimator.py  _iid.py  _validation.py  _y.py
src/pybear_dask/model_selection/autogridsearch/: AutoGSTCVDask.py  AutoGridSearchCVDask.py
src/pybear_dask/model_selection/autogridsearch/_autogridsearch_wrapper/: _refit_can_be_skipped.py
tests/base/: get_feature_names_test.py  is_classifier_1min35sec_test.py
tests/model_selection/GSTCV/: conftest.py  conftest_gstcv_dask_fixture_37sec_test.py  conftest_list_of_fixtures
tests/model_selection/GSTCV/GSTCV/: validation_init_test.py
tests/model_selection/GSTCV/GSTCVDask/fit/: accuracy_50sec_test.py  fold_splitter_test.py  get_kfold_test.py  parellelized_scorer_test.py  parellelized_train_scorer_test.py
tests/model_selection/GSTCV/GSTCVDask/validation/: dask_estimator_test.py  dask_estimator_wrapped_test.py  validation_init_3min25sec_test.py
tests/model_selection/autogridsearch/: AutoGSTCVDask_3min22sec_test.py  agscv_dask_10sec_test.py  conftest.py  verification_AutoGSTCVDask_1min39sec_test.py  verification_AutoGridSearchCVDask_Xsec_test.py
tests/model_selection/autogridsearch/autogridsearch_wrapper/: refit_can_be_skipped_6sec_test.py
tests/preprocessing/: conftest.py  conftest_X_factory_18sec_test.py
tests/preprocessing/ColumnDeduplicateTransformer/: dask_wrappers_12sec_test.py
tests/preprocessing/ColumnDeduplicator/: dask_wrappers_12sec_test.py
